# phoenix

./: .cursorrules  .env.example  .gitignore  PHOENIX_FIXES.md  PHOENIX_MIKROTIK_FINAL.md  PHOENIX_V10.md  PHOENIX_V10_ALL_PROTOCOLS.md  PHOENIX_V10_DBF_READY.md  PHOENIX_V10_FINAL.md  PHOENIX_V10_HARD_MODE.md  pyproject.toml  quick_setup.sh  requirements.txt
deploy/: bootstrap.sh  deploy_success_techniques.py  docker-compose.yml  health_check.sh  mikrotik_deploy.sh  mikrotik_deploy_winbox.py  obfs4_pt_launcher.py  remote_deploy.py  setup_l2tp.sh  setup_obfs4.sh  setup_openvpn.sh  setup_success_techniques.sh  setup_wireguard.sh  troubleshoot.sh
docs/: architecture.md  dbf_guide.md  developer_guide.md  future_proofing.md  hard_mode_guide.md  hard_mode_guide_updated.md  mikrotik_advanced_roles.md  mikrotik_usb_guide.md  mikrotik_winbox_setup.md  user_guide.md
scripts/: pre-commit-secrets.sh
scripts/mikrotik/: dns_cache.rsc  mesh_client.rsc  monitoring.rsc  multi_wan.rsc  smart_firewall.rsc  smart_splitter.rsc  vpn_server.rsc
src/: __init__.py  auto_adapt_report.py  completion_report.py  completion_report_final.py  dbf_compliance_report.py  fixes_report.py  hard_mode_report.py  main.py  mikrotik_deployment_report.py  success_techniques_report.py
src/ai/: __init__.py  ab_testing.py  auto_updater.py  dynamic_config_generator.py  feedback_loop.py  filtering_detector.py  fingerprint_simulator.py
src/hard_mode/: __init__.py  emergency_fallback.py  llm_defender.py  personal_server_manager.py
web/: app.py  auth.py  requirements.txt  requirements_web.txt  run.sh
(+107 files in other folders)
