[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phoenix-vpn"
version = "10.0.0"
description = "Phoenix VPN V10 – censorship-resistant orchestration system"
readme = "PHOENIX_V10.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "cryptography>=42.0.0",
    "qrcode[pil]>=7.4.2",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "paramiko>=3.4.0"]

[project.scripts]
phoenix = "main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
